welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:3: error: value REd is not a member of object java.awt.Color
	setCouleurBrosse(Color.REd)
                               ^PatternPicture:10: error: value Yellow is not a member of object java.awt.Color
	setCouleurBrosse(Color.Yellow)
                               ^PatternPicture:17: error: value Green is not a member of object java.awt.Color
	setCouleurBrosse(Color.Green)
                               ^PatternPicture:24: error: value Blue is not a member of object java.awt.Color
	setCouleurBrosse(Color.Blue)
                               ^