welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
def faireMotif(){
	avance()
	setCouleurBrosse(Color.REd)
	baisseBrosse()
	leveBrosse()
	gauche()
	avance()
	gauche()
	avance()
	setCouleurBrosse(Color.Yellow)
	baisseBrosse()
	leveBrosse()
	gauche()
	avance()
	gauche()
	avance()
	setCouleurBrosse(Color.Green)
	baisseBrosse()
	leveBrosse()
	gauche()
	avance()
	gauche()
	avance()
	setCouleurBrosse(Color.Blue)
	baisseBrosse()
	leveBrosse()
	gauche()
	avance()
	gauche()
	
}
override def run() {faireMotif()
}
